@@ -4,7 +4,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 
 public class SDhulb { /*Built not to handle: non UTF-8 source files  */
-    static String vStr = "0.0.0.6"; /*Rightmost: incremented every commit. Second from right: incremented upon feature implementation. Second from left: incremented upon implementation of a set of related features. Leftmost: incremented every breaking change. NO NUMBERS INCREMENTED FROM COMMITS CONSISTING OF COMMENTS EXCLUSIVELY */
+    static String vStr = "0.0.0.7"; /*Rightmost: incremented every commit. Second from right: incremented upon feature implementation. Second from left: incremented upon implementation of a set of related features. Leftmost: incremented every breaking change. NO NUMBERS INCREMENTED FROM COMMITS CONSISTING OF COMMENTS EXCLUSIVELY */
 
     /*addr is same size as int
      * *x = addr*x
@@ -13,7 +13,7 @@ public class SDhulb { /*Built not to handle: non UTF-8 source files  */
     public static boolean wasErr = false;
     public static String errMsg = null;
     public static char[] typchars = new char[]{' ', '$', '(', ')', '*', ',', '<', '>'};
-    public static String[] keywords = new String[]{"as", "break", "byref", "byval", "class", "continue", "else", "extends", "false", "for", "goto", "if", "implements", "imply", "interface", "jump", "null", "return", "struct", "structure", "this", "to", "true", "typealias", "typedef", "typefullalias", "while"};
+    public static String[] keywords = new String[]{"as", "break", "byref", "byval", "class", "continue", "else", "extends", "false", "for", "goto", "if", "implements", "imply", "interface", "jump", "null", "return", "static", "struct", "structure", "this", "to", "true", "typealias", "typedef", "typefullalias", "while"};
     public static boolean isValidTypeChar(char test) {
         int min = 0;
         int max = typchars.length;
